# IE624-cobol-migrator

./: .env.example  .gitignore  CLAUDE.md  README.md  cobol_agent_course_project_plan.md  run.bat  run.sh  setup.bat  setup.sh
backend/: .env.example  README.md  pyproject.toml
backend/src/cobol_migrator/: api.py  cobol_parser.py  config.py  db.py  dummy_files.py  errors.py  ingest.py  models.py  run_logger.py  safety.py  test_environment.py
backend/src/cobol_migrator/agent/: __init__.py  cli.py  graph.py  state.py
backend/src/cobol_migrator/agent/nodes/: __init__.py  analyze.py  finalize.py  gen_tests.py  planner.py  reflect.py  run_tests.py  translate.py  validate.py  validate_cobol.py
backend/src/cobol_migrator/validators/: __init__.py  differential.py  llm_judge.py  property_based.py  static_analysis.py  verdict.py
backend/tests/: test_api.py  test_cobol_parser.py  test_safety.py  test_state.py  test_validators.py
backend/tests/fixtures/: currency_round.cbl
backend/tests/integration/: test_hello_world.py  test_reflection_loop.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/lib/: api.ts
scripts/: view_log.py
stages/: stage_1_scaffolding.md  stage_2_agent_core.md  stage_3_ingestion_and_reflection.md  stage_4_validation_and_streaming.md  stage_5_frontend_eval_and_demo.md
